--- a/public/css/materialize.css
+++ b/public/css/materialize.css
@@ -2551,7 +2551,7 @@ ul:not(.browser-default) li {
 }
 
 a {
-  color: #039be5;
+  color: #6d7071;
   text-decoration: none;
   -webkit-tap-highlight-color: transparent;
 }
